モバイルでtest

--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@ https://templatemo.com/tm-536-dream-pulse
             <div class="tm-section-wrap bg-white">
             <section id="about" class="row tm-section">
               <div class="col-xl-6">
-                <div class="tm-section-half tm-section-half2 tm-section-half3">    
+                <div class="tm-section-half tm-section-half2">    
 			  		<div><i class="fas fa-6x fa-map-marker-alt mb-5 tm-section-icon login2"></i>
 						<h2 class="tm-section-title  mb-5 login">会社の案内について</h2>
 						<hr>
 						<p class="mb-5 login">山手線　大塚駅南口から徒歩4分</p>
-					    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3238.8941008474326!2d139.7268205152602!3d35.72882288018321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188dd79698d9dd%3A0xbd9e303616898900!2z5qCq5byP5Lya56S-U2V2ZW50aC1MYW5k!5e0!3m2!1sja!2sjp!4v1606816096441!5m2!1sja!2sjp" width="350" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="login2"></iframe></div><br>
+					    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3238.8941008474326!2d139.7268205152602!3d35.72882288018321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188dd79698d9dd%3A0xbd9e303616898900!2z5qCq5byP5Lya56S-U2V2ZW50aC1MYW5k!5e0!3m2!1sja!2sjp!4v1606816096441!5m2!1sja!2sjp" width="420" height="270" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="login2 tm-section-half3"></iframe></div><br>
 					    <h2><p class="mb-5 tm-color-black login">会社概要</p></h2><hr>
-					    <table width="350" height="250" border="3" bordercolor="#00CC66"  class="login">
+					    <table width="420" height="270" border="3" bordercolor="#00CC66"  class="login tm-section-half3">
   <tr>
     <th>名称</th>
     <th>株式会社 Seventh-land</th>
@@ -205,19 +205,40 @@ https://templatemo.com/tm-536-dream-pulse
   </tr>		
 </table><br>
 	<h2><p class="mb-5 tm-color-black login">関連会社</p></h2><hr>
-	<table width="350" height="250" border="3" bordercolor="#00CC66"  class="login">
+	<table width="420" height="270" border="3" bordercolor="#00CC66"  class="login tm-section-half3">
 	<tr>
 	<td>名称</td>
 	<td><a href="http://www.empire-corporation.co.jp/" target="_parent ">株式会社 Ｅ·Ｃ</a></td>
 	</tr>
 	<tr>
-	<td></td>
-	<td></td>
+	<td>設立</td>
+	<td>2015年(平成27年)4月22日</td>
 	</tr>
 	<tr>
-	<td></td>
-	<td></td>
+	<td>資本金</td>
+	<td>2,800万円</td>
 	</tr>
+	<tr>
+	<td>代表者</font></td>
+	<td><ruby>成瀬　暁太郎<rt>なりせ　しょうたろう</rt></ruby></td>	
+	</tr>
+	<tr>
+	<td>所在地</td>
+	<td>
+	<li>本社<br>〒116-0014<br>東京都荒川区東日暮里６丁目１５−１
+    Tel.03-6912-9685<br>Fax.03-5960-8662</li>
+	<li>山梨県工場<br>〒400-0502<br>山梨県南巨摩郡富士川町最勝寺272-3
+	Tel.0556-42-9074<br>Fax.0556-42-9075</li>	
+	</td>
+	</tr>
+	<tr>
+    <td>事業<br>内容</td>
+    <td><li>人材派遣</li>
+		<li>精密金属加工</li>
+		<li>国際貿易</li>
+		<li>サービス業</li>
+	</td>
+    </tr>
 	</table>
 		     
                 </div>
@@ -435,6 +456,6 @@ https://templatemo.com/tm-536-dream-pulse
     <script src="js/parallax.min.js"></script>
     <script src="slick/slick.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/templatemo-scripts.js"></script>    
+    <script src="js/templatemo-scripts.js"></script>
   </body>
 </html>
