--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                    <h1 class="tm-brand text-uppercase"><img src="img/logo.jpg" width="220" height="122" style="max-width:100%;overflow:hidden;"></h1>
+                    <h1 class="tm-brand text-uppercase"><img src="img/logo3.png" width="400" height="220" style="transform: translateX(-120px)"></h1>
                   </div>
                 </div>
               </div>
@@ -131,7 +131,7 @@ https://templatemo.com/tm-536-dream-pulse
 					  学割などのサービスも行っています。<br>また、入居の際の審査、ガスや水道などの手続きもサポート致します。
 					  さらに、不動産管理も手掛けています。
                     </p>
-                    <p class="mb-5 login">
+                    <p class="login">
 					私たちSeventh-landは、<br>
 					いわゆる「不動産会社」を目指しません。<br>
 					従来の不動産業界の枠組みにとらわれず、お客様に幅広い価値をご提供する企業として進化し続け、「住まいのオールラウンダー」を目指してまいります。
