border-radius 追加

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ https://templatemo.com/tm-536-dream-pulse
             <section id="about" class="row tm-section">
               <div class="col-xl-6">
                 <div class="tm-section-half tm-section-half2">    
-                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon login2"></i></div>                       
-                  <h2 class="tm-section-title  mb-5 login">事業について</h2>
-                    <p class="mb-5 login">
+                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon login2 tm-section-transform-icon"></i></div>                       
+                  <h2 class="tm-section-title2  mb-3">事業について</h2>
+                    <p style="font-size: 18px" class="login">
                       外国人に向け不動産の仲介を行う会社<br>
 					  外国人に向け不動産の賃貸及び売買を仲介している<br>
 					  賃貸では、レオパレス物件をはじめとした賃貸住宅を扱い、<br>
@@ -137,12 +137,12 @@ https://templatemo.com/tm-536-dream-pulse
 					従来の不動産業界の枠組みにとらわれず、お客様に幅広い価値をご提供する企業として進化し続け、「住まいのオールラウンダー」を目指してまいります。
 					</p>
                 </div>
-              </div>
+              </div><br>
               <div class="col-xl-6">
                 <div class="tm-section-half tm-section-half2">
                     <div><i class="far fa-6x fa-building mb-5 tm-section-icon login2"></i></div>
-                    <h2 class="tm-section-title  mb-5 login">会社について</h2>
-                    <p class="mb-5  login">
+                    <h2 class=" tm-section-title2 mb-3 ">会社について</h2>
+                    <p class="mb-1  login">
                       会社名 株式会社 Seventh-land<br>
 					  
 					  私たちSeventh-landは、不動産を通じたお客様とのお取引は「ゴール」ではなく「スタート」と考えております。<br>
